Fixed issue with tooltip shift not resetting

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,23 +4,23 @@
 
 @layer base {
     h1 {
-        @apply text-8xl font-bold;
+        @apply sm:text-8xl font-bold text-7xl;
     }
 
     h2 {
-        @apply text-7xl  font-bold;
+        @apply sm:text-7xl font-bold text-6xl;
     }
 
     h3 {
-        @apply text-4xl  font-bold;
+        @apply sm:text-4xl font-bold text-3xl;
     }
 
     h4 {
-        @apply text-2xl font-semibold;
+        @apply sm:text-2xl font-semibold text-xl;
     }
 
     h5 {
-        @apply text-xl font-semibold;
+        @apply sm:text-xl font-semibold text-lg;
     }
 
     h6 {
@@ -54,7 +54,7 @@
     }
 
     .card {
-        @apply overflow-hidden px-6 py-3 border-secondary border rounded-lg shadow-lg;
+        @apply overflow-hidden sm:px-6 px-4 sm:py-3 py-2 border-secondary border rounded-lg shadow-lg;
     }
 
     .card-separator {
